network-policies/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app1
  labels:
    run: app1
spec:
  containers:
  - image: praqma/network-multitool
    name: app1
---
apiVersion: v1
kind: Pod
metadata:
  name: app2
  labels:
    run: app2
spec:
  containers:
  - image: nginx 
    name: app2
    ports:
      - containerPort: 80
